2020-08-13  Adam Koehn  <adamkoehn1@gmail.com>

    Create program that is completely uneccissary

    * wrote initial program and build tooling