@@ -1,0 +1,2 @@
+affirmationconfdir = $(sysconfdir)
+affirmationconf_DATA = affirmation
