@@ -1,0 +1,3 @@
+You're doing a great job!	Keep up the good work! What you're doing is fantastic! Good job!
+That's just great!	The work you're doing really matters! Keep it up!
+This looks wonderful!	It looks like the work your doing looks great!
